# brpc

./: .bazelrc  BUILD  BUILD.bazel  WORKSPACE  ucx.conf
bazel/: ucx.BUILD
example/: BUILD
example/multi_threaded_echo_c++/: BUILD.bazel  client.cpp  multi_server_client.cpp  run_client.sh  run_server.sh  server.cpp  ucx.conf
example/rdma_performance/: client.cpp  server.cpp
src/brpc/: socket.cpp  ucp_acceptor.cpp  ucp_cm.cpp  ucp_connection.cpp  ucp_connection.h  ucp_worker.cpp  ucp_worker.h
src/brpc/rdma/: block_pool.cpp  rdma_endpoint.cpp
src/butil/: iobuf.cpp
src/butil/uma/: mtx.c  uma_core.c
src/butil/uma/uma/: mtx.h  uma_int.h
